added spotify section

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ export enum Nav {
 ---
 
 <header
-  class="flex text-c-fg gap-10 text-lg justify-center items-center my-5 bg-gray font-mono"
+  class="pt-5 flex text-c-fg gap-10 text-lg justify-center items-center my-5 bg-gray font-mono"
 >
   <div class={`cursor-pointer ${current === Nav.HOME ? 'text-c-blue' : ''}`}>
     Home
