--- a/src/components/Layouts/PageContainer.astro
+++ b/src/components/Layouts/PageContainer.astro
@@ -2,7 +2,7 @@
 ---
 
 <main
-  class="snap-center snap-always container mx-auto border border-black h-screen 2xl:max-w-4xl"
+  class="flex-grow  snap-center snap-always container mx-auto h-screen 2xl:max-w-4xl"
 >
   <slot />
 </main>
