improved twitter seo
improved twitter seo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const { artists } = await artistResponse.json();
     <title>Barsi | Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./me.png" />
     <meta name="generator" content={Astro.generator} />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -47,12 +47,12 @@ const { artists } = await artistResponse.json();
     <meta name="theme-color" content="#f087bd" />
     <meta property="og:description" content="Barsi's portfolio website" />
     <meta property="og:title" content="Barsi | Portfolio" />
-    <meta property="og:image" content="/banner.png" />
+    <meta property="og:image" content="./me.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Barsi | Portfolio" />
-    <meta name="twitter:description" content="Spotify stats for nexxel" />
-    <meta name="twitter:image" content="/banner.png" />
+    <meta name="twitter:description" content="who am i? what do i do? what do i listen to?" />
+    <meta name="twitter:image" content="./me.png" />
     <style>
       .scroll::-webkit-scrollbar {
         display: none;
