--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ const { artists } = await artistResponse.json();
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Barsi | Portfolio" />
     <meta name="twitter:description" content="who am i? what do i do? what do i listen to?" />
-    <meta name="twitter:image" content="./me.png" />
+    <meta name="twitter:image" content="/me.png" />
     <style>
       .scroll::-webkit-scrollbar {
         display: none;
