--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import '../../styles/globals.css';
 import SpotifySection from '../sections/SpotifySection';
 import PageContainer from '../components/containers/PageContainer.astro';
 import Header from '../components/Header.astro';
@@ -64,6 +65,7 @@ const { artists } = await artistResponse.json();
   </head>
 
   <body class="flex flex-col h-screen">
+  <body class="flex flex-col">
     <div
       class="bg-c-bg scoll-smooth snap-y snap-mandatory h-screen scroll overflow-scroll"
     >
