--- a/src/components/containers/PageContainer.astro
+++ b/src/components/containers/PageContainer.astro
@@ -2,7 +2,7 @@
 ---
 
 <main
-  class="flex-grow flex snap-center snap-always container mx-auto h-screen max-w-4xl"
+  class="flex-grow flex flex-col snap-center snap-always container mx-auto h-screen max-w-4xl"
 >
   <slot />
 </main>
